Add a double precision FFT SIMD benchmark